<resources>
    <string name="app_name">Draft</string>
    <string name="books">Books</string>
    <string name="_1st_semester">1st Semester</string>
    <string name="_2nd_semester">2nd Semester</string>
    <string name="_3rd_semester">3rd Semester</string>
    <string name="_4th_semester">4th Semester</string>
    <string name="_5th_semester">5th Semester</string>
    <string name="_6th_semester">6th Semester</string>
    <string name="_7th_semester">7th Semester</string>
    <string name="_8th_semester">8th Semester</string>
</resources>