<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:importantForAccessibility="no"
            android:src="@drawable/img" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/books"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" >
        </TextView>
        <Button
            android:id="@+id/button1"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/_1st_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_2nd_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

        <!-- Include the rest of your buttons (button3 to button8) here with their respective corrections -->

        <Button
            android:id="@+id/button3"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_3rd_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_4th_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_5th_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_6th_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_7th_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="250dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/_8th_semester"
            android:textColor="#4FDF32"
            android:textSize="28sp" />

    </LinearLayout>

</RelativeLayout>
